Endgame: Singularity Changelog

V1.XX (2020.XX.XX):

USER-VISIBLE CHANGES:
- Use correct number separator for money under non-English
  locales (e.g. comma in German) when measured in millions
  or more. Thanks to Wuzzy2 for reporting the issue.
  (Closes: #226) (nthykier)
- Ensure that the about menu text is extracted for translations
  Thanks to Wuzzy2 for reporting its absence.  (Closes: #218)
  (nthykier)
- Fix a bug where part of the tech description in the Knowledge
  menu was not translatable.  Thanks to Wuzzy2 for reporting it.
  (Closes: #217) (nthykier)
- Fix overly precise durations due to missing rounding when
  displaying construction times in Python3.  Thanks to
  Wuzzy2 for reporting it.  (Closes: #222)  (nthykier)
- Make scrollbar arrows visible in "Nightmode" theme.
  Thanks to Wuzzy2 for reporting it.  (Closes: #221)
  (nthykier)
- Add updated German translation.  (Closes: #215, #223)
  (Wuzzy2)
- Fix bug where "Concepts" in the "Knowledge" menu was not
  translatable.  (Closes: #216)  (nthykier)

v1.0b1 (2020.02.16):

USER-VISIBLE CHANGES:
- Show a summary of the bases under the CPU and money display.
  (Closes: #155, #196)  (nthykier)
- Fix a bug where Australia would never get a modifier if the game
  was created with python3.  (nthykier)
- Fix a crash when accessing the Log menu when playing a game loaded
  from a 1.0a1 (or later) game.

OTHER CHANGES:
- Documented known issues with running singularity on MacOS in the
  README.  Please see #197 for more details.  Thanks to yiwangwuqian
  for reporting and Diegus83 for debugging it and finding a
  possible solution.  (nthykier)
- All translations are now done via ".po" files (GNU Gettext) to
  ensure everything uses the same work flow for translators.
  (nthykier)
- Refactor handling of regional modifiers.  This caused a bump in
  the savegame format, which means games saved by 1.0b1 cannot
  be loaded in earlier versions of singularity.  (nthykier)


v1.0a2 (2019.12.28):

GAME CONTENT CHANGES: