@@ -3,6 +3,9 @@ Endgame: Singularity Changelog
 V1.XX (2020.XX.XX):
 
 USER-VISIBLE CHANGES:
+- Fix bug where clicking Cancel in the Options menu would still
+  commit changes to selected warnings.  Thanks to Wuzzy2 for
+  reporting the issue.  (Closes: #230) (nthykier)
 - Use correct number separator for money under non-English
   locales (e.g. comma in German) when measured in millions
   or more. Thanks to Wuzzy2 for reporting the issue.
